traefik3/7_middleware/test-stripprefix.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: abcd
  name: test-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /ww
      - /tt
