traefik3/7_middleware/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: abcd
  name: middleware-test-svc
  labels:
    app: middleware-test
spec:
  ports:
  - name: web
    port: 18000
    targetPort: 8000
    protocol: TCP

  selector:
    app: middleware-test
