traefik3/7_middleware/ingressroute_stringprefix.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-stripprefix
  namespace: abcd
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`www.web.com`) && PathPrefix(`/ww`)
      kind: Rule
      services:
        - name: middleware-test-svc
          port: 18000
      middlewares:
        - name: test-stripprefix
